--- a/env-serve-xgb-flask.yml
+++ b/env-serve-xgb-flask.yml
@@ -7,8 +7,6 @@ dependencies:
   - python=3.7
   - flask
   - pandas<=1
-  - scikit-learn=0.22.1
+  - scikit-learn=0.22.2
   - gunicorn
-  - pip
-  - pip:
-      - xgboost
+  - xgboost=1.0.2
